feat: Implement core game systems, day flow management, and initial UI components.

--- a/Assets/docs/길드 접수원.md
+++ b/Assets/docs/길드 접수원.md
@@ -69,6 +69,15 @@
 		- 정보 카드가 순서대로 뜸(6개)
 		- 각 정보 카드마다 선택지:
 		    - `기록하기` / `폐기` / `추가 조사(비용)`(선택)
+			- `추가 조사`는 조사 과정을 한 번에 끝내지 않기
+				한 번 누르면 끝이 아니라 “단계형”으로 두기
+​
+				예 : 
+					1차 조사: AP 1 소모, 신뢰도 +10, 텍스트: “대략적인 위치가 파악되었습니다.”
+
+					2차 조사: 추가 AP 1, 신뢰도 +20, “현지 모험가들의 증언이 확보되었습니다.”
+
+					3차 정찰: AP 2, 신뢰도 +30, “정찰 보고서 도착, 세부 정보 확정.”
 		- 버튼: `수집 완료`
 	- **Step 3 — 퀘스트 작성**
 		- 좌측: 정보 보관함(필터/검색)
